[package]
name = "pioneer"
version = "0.1.0"
edition = "2021"

[dependencies]
# database
postgres = "0.19.9"
sqlite = "0.36.1"
mysql = { version = "25.0.1", default-features = false, features = ["minimal"] }
# structures
structstruck = "0.4.1"
# cli
clap = { version = "4.5.16", features = ["derive"] }
# gui
#tui = "0.19.0"
# async
#tokyo = "1.0.0"

